fixing double-render font issue on ios.

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,12 +66,14 @@ header .mainLogo h1 {
 header .logoMainTxt {
 	font-family: ClickerScript;
 	margin-left: 60px;
+	font-weight: normal;
 }
 
 header .logoSubTxt {
 	font-family: PoiretOne;
 	font-size: 15px;
 	color: #adbc44;
+	font-weight: normal;
 }
 
 .nav {
@@ -163,6 +165,7 @@ header .mainLogo a {
 	width: 100%;
 	z-index: 5;
 	font-family: ClickerScript;
+	font-weight: normal;
 }
 
 .heroText h1 {
@@ -340,6 +343,7 @@ header .mainLogo a {
 	text-align: center;
 	font-family: PoiretOne;
 	font-size: 36px;
+	font-weight: normal;
 	border-top: 1px solid #fff;
 	border-bottom: 1px solid #fff;
 	padding: 10px 20px;
@@ -353,7 +357,7 @@ header .mainLogo a {
 	margin: 0 auto;
 	font-family: PoiretOne;
 	padding: 20px 0;
-	font-size: 18px;
+	font-size: 20px;
 	line-height: 1.5;
 	font-weight: 400;
 	letter-spacing: .01rem;
@@ -380,7 +384,7 @@ header .mainLogo a {
 .servicesWrapper,
 .productShowcaseWrapper {
 	font-family: PoiretOne;
-	font-size: 18px;
+	font-size: 20px;
 	line-height: 1.5;
 	font-weight: 400;
 	letter-spacing: .01rem;
@@ -395,6 +399,10 @@ header .mainLogo a {
 	background: rgba(255, 255, 255, 0.5);
 	padding: 3%;
 	float: left;
+}
+
+.storeInfo h2 {
+	font-weight: normal;
 }
 
 .storeInfo p {
@@ -478,7 +486,7 @@ header .mainLogo a {
 	font-family: PoiretOne;
 	font-size: 18px;
 	line-height: 1.5;
-	font-weight: bold;
+	font-weight: normal;
 	letter-spacing: .01rem;
 	color: #fff;
 	width: 96%;
@@ -682,6 +690,7 @@ header .mainLogo a {
 
 .productShowcaseWrapper h3 {
 	font-size: 46px;
+	font-weight: normal;
 	text-align: center;
 	letter-spacing: 1rem;
 	color: #555;
@@ -812,4 +821,41 @@ h3.avojuice {
 @font-face {
   font-family: ClickerScript;
   src: url('font/Clicker_Script/ClickerScript-Regular.ttf') format('truetype');
+}
+
+
+
+@media (max-width: 600px) {
+	.header {
+		height: 60px;
+		top: -70px;
+	}
+
+	.header .mainLogo {
+		width: 100%;
+	}
+
+	.header #logo {
+		text-align: center;
+	}
+
+	.header .mainLogo h1 {
+		margin-top: 12px;
+	}
+
+	.header .logoMainTxt {
+		font-size: 14px;
+		margin-left: 15px;
+		display: block;
+	}
+
+	.header .logoSubTxt {
+		font-size: 12px;
+		margin-left: 15px;
+		display: block;
+	}
+
+	.header .nav {
+		display: none;
+	}
 }
